Add context and Connection to DB.

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "OrderProjectConnection": "server=PROGER\\SQLEXPRESS;Initial Catalog=OrderProjectDB;User ID=SomeUser;password=123"
+  }
 }
