Added first migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OrderProjectConnection": "server=PROGER\\SQLEXPRESS;Initial Catalog=OrderProjectDB;User ID=SomeUser;password=123"
+    "OrderProjectConnection": "server=PROGER\\SQLEXPRESS;Initial Catalog=OrderProjectDB;User ID=TestUser;password=TestPass"
   }
 }
