Fixed SPA Proxy.

--- a/ClientApp/public/manifest.json
+++ b/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CallLogging",
-  "name": "CallLogging",
+  "short_name": "OrderProject",
+  "name": "OrderProject",
   "icons": [
     {
       "src": "favicon.ico",
