--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "calllogging",
-  "version": "0.1.0",
+  "name": "orderproject",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.3",
